// Vitest Snapshot v1

exports[`Calendar > Calendar baseVue demo works fine 1`] = `<t-calendar />`;

exports[`Calendar > Calendar cardVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
  data-v-a0ba8a08=""
>
  <div
    data-v-a0ba8a08=""
  >
    <label
      data-v-a0ba8a08=""
    >
      请选择风格：
    </label>
    <t-select
      class="demo-select-base"
      data-v-a0ba8a08=""
    >
      <t-option
        data-v-a0ba8a08=""
        label="全屏风格"
        value="full"
      />
      <t-option
        data-v-a0ba8a08=""
        label="卡片风格"
        value="card"
      />
    </t-select>
    <t-button
      data-v-a0ba8a08=""
      theme="primary"
    >
      今天（当前高亮日期）
    </t-button>
  </div>
  <div
    data-v-a0ba8a08=""
  >
    <label
      data-v-a0ba8a08=""
    >
      日期补零：
    </label>
    <t-switch
      data-v-a0ba8a08=""
      size="large"
    />
  </div>
  <t-calendar
    data-v-a0ba8a08=""
    fillwithzero="true"
    isshowweekenddefault="true"
    theme="card"
  />
</div>
`;

exports[`Calendar > Calendar cellAppendVue demo works fine 1`] = `
<t-calendar
  data-v-72e07a29=""
/>
`;

exports[`Calendar > Calendar cellVue demo works fine 1`] = `
<t-calendar
  data-v-796f504e=""
/>
`;

exports[`Calendar > Calendar controllerConfigVue demo works fine 1`] = `
<div
  class="controllerConfig-demo"
  data-v-aa913252=""
>
  <div
    data-v-aa913252=""
    style="margin: 12px 0px;"
  >
    <fieldset
      data-v-aa913252=""
    >
      <legend
        data-v-aa913252=""
      >
        控件全局
      </legend>
      <p
        data-v-aa913252=""
      >
        <label
          data-v-aa913252=""
        >
          是否显示（全部控件）：
        </label>
        <t-switch
          data-v-aa913252=""
        />
      </p>
      <p
        data-v-aa913252=""
      >
        <label
          data-v-aa913252=""
        >
          是否禁用（全部控件）：
        </label>
        <t-switch
          data-v-aa913252=""
        />
      </p>
    </fieldset>
    <fieldset
      data-v-aa913252=""
    >
      <legend
        data-v-aa913252=""
      >
        控件局部
      </legend>
      <p
        data-v-aa913252=""
      >
        <label
          data-v-aa913252=""
        >
          是否显示“年份选择”控件：
        </label>
        <t-switch
          data-v-aa913252=""
        />
        <label
          data-v-aa913252=""
        >
          是否禁用“年份选择”控件：
        </label>
        <t-switch
          data-v-aa913252=""
        />
      </p>
      <p
        data-v-aa913252=""
      >
        <label
          data-v-aa913252=""
        >
          是否显示“月份选择”控件：
        </label>
        <t-switch
          data-v-aa913252=""
        />
        <label
          data-v-aa913252=""
        >
          是否禁用“月份选择”控件：
        </label>
        <t-switch
          data-v-aa913252=""
        />
      </p>
      <p
        data-v-aa913252=""
      >
        <label
          data-v-aa913252=""
        >
          是否显示“模式切换”控件：
        </label>
        <t-switch
          data-v-aa913252=""
        />
        <label
          data-v-aa913252=""
        >
          是否禁用“模式切换”控件：
        </label>
        <t-switch
          data-v-aa913252=""
        />
      </p>
      <p
        data-v-aa913252=""
      >
        <label
          data-v-aa913252=""
        >
          是否禁用“隐藏周末”控件：
        </label>
        <t-switch
          data-v-aa913252=""
        />
        <label
          data-v-aa913252=""
        >
          是否禁用“显示周末”控件：
        </label>
        <t-switch
          data-v-aa913252=""
        />
        <label
          data-v-aa913252=""
        >
          是否显示“隐藏\\显示周末”控件：
        </label>
        <t-switch
          data-v-aa913252=""
        />
      </p>
      <p
        data-v-aa913252=""
      >
        <label
          data-v-aa913252=""
        >
          是否禁用“今天”按钮控件：
        </label>
        <t-switch
          data-v-aa913252=""
        />
        <label
          data-v-aa913252=""
        >
          是否禁用“本月”按钮控件：
        </label>
        <t-switch
          data-v-aa913252=""
        />
        <label
          data-v-aa913252=""
        >
          是否显示“今天\\本月”控件：
        </label>
        <t-switch
          data-v-aa913252=""
        />
      </p>
    </fieldset>
  </div>
  <t-calendar
    controllerconfig="[object Object]"
    data-v-aa913252=""
  />
</div>
`;

exports[`Calendar > Calendar eventsVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
  data-v-b47020f6=""
>
  <t-calendar
    data-v-b47020f6=""
  />
</div>
`;

exports[`Calendar > Calendar firstDayOfWeekVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
  data-v-67d2fdc0=""
>
  <div
    data-v-67d2fdc0=""
  >
    <label
      data-v-67d2fdc0=""
    >
      日历的第一列为：
    </label>
    <t-select
      class="demo-select-base"
      data-v-67d2fdc0=""
    >
      <t-option
        data-v-67d2fdc0=""
        label="周一"
        value="1"
      />
      <t-option
        data-v-67d2fdc0=""
        label="周二"
        value="2"
      />
      <t-option
        data-v-67d2fdc0=""
        label="周三"
        value="3"
      />
      <t-option
        data-v-67d2fdc0=""
        label="周四"
        value="4"
      />
      <t-option
        data-v-67d2fdc0=""
        label="周五"
        value="5"
      />
      <t-option
        data-v-67d2fdc0=""
        label="周六"
        value="6"
      />
      <t-option
        data-v-67d2fdc0=""
        label="周日"
        value="7"
      />
    </t-select>
  </div>
  <t-calendar
    data-v-67d2fdc0=""
    firstdayofweek="3"
  />
</div>
`;

exports[`Calendar > Calendar headVue demo works fine 1`] = `
<t-calendar>
  <div
    slot="head"
  >
    🗓 TDesign开发计划
  </div>
</t-calendar>
`;

exports[`Calendar > Calendar modeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
  data-v-e9a00fe2=""
>
  <div
    data-v-e9a00fe2=""
  >
    <label
      data-v-e9a00fe2=""
    >
      可以在组件外切换成：
    </label>
    <t-select
      class="demo-select-base"
      data-v-e9a00fe2=""
    >
      <t-option
        data-v-e9a00fe2=""
        label="日历"
        value="month"
      />
      <t-option
        data-v-e9a00fe2=""
        label="月历"
        value="year"
      />
    </t-select>
  </div>
  <t-calendar
    data-v-e9a00fe2=""
    mode="year"
  />
</div>
`;

exports[`Calendar > Calendar rangeVue demo works fine 1`] = `
<t-calendar
  range="2018-08,2028-04"
/>
`;

exports[`Calendar > Calendar slotPropsApiVue demo works fine 1`] = `
<t-calendar
  cell="function () { [native code] }"
  head="function () { [native code] }"
/>
`;

exports[`Calendar > Calendar valueVue demo works fine 1`] = `
<div>
  <t-form
    layout="inline"
  >
    <t-form-item
      label="自己指定年："
    >
      <t-input />
    </t-form-item>
    <t-form-item
      label="自己指定年月："
    >
      <t-input />
    </t-form-item>
  </t-form>
  <t-calendar
    month="11"
    value="1998-11-11"
    year="1998"
  />
</div>
`;

exports[`Calendar > Calendar weekVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div
    class="tdesign-demo-block-column"
  >
    <h3>
      使用插槽
    </h3>
    <t-calendar />
  </div>
  <div
    class="tdesign-demo-block-column"
  >
    <h3>
      使用week属性 - Array
    </h3>
    <t-calendar
      firstdayofweek="7"
      week="星期1,星期2,星期3,星期4,星期5,星期6,星期天"
    />
  </div>
  <div
    class="tdesign-demo-block-column"
  >
    <h3>
      使用week属性 - TNode
    </h3>
    <t-calendar
      week="function () { [native code] }"
    />
  </div>
</div>
`;
